# auto-mcp

./: .example.env  README.md  langchain-agent-server.py  langchain_simple_agent.py  pyproject.toml
automcp/: cli.py
automcp/cli_templates/: framework_config.yaml  pyproject.toml.template  run_mcp.py.template
examples/crewAI/stock_analysis/src/stock_analysis/: crew.py  main.py  mcp_run.py
examples/crewAI/stock_analysis/src/stock_analysis/tools/: sec_tools.py
examples/langchain/: langchain_agent_server.py  pyproject.toml  run_agent.py
src/auto_mcp/: __init__.py
src/auto_mcp/adapters/: __init__.py  crewai_adapter.py
